--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "script.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel build index.html"
+   "scripts": {
+    "build": "parcel build index.html"
   },
   "keywords": [],
   "author": "",
