--- a/package.json
+++ b/package.json
@@ -3,21 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "script.js",
-   "scripts": {
+  "scripts": {
     "build": "parcel build index.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dom": "^0.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
-    "router": "^1.3.8"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
-    "parcel": "^2.12.0",
-    "process": "^0.11.10"
+    "parcel": "^2.12.0"
   }
 }
